--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,11 @@ dependencies:
   flutter_svg: ^2.0.17
   flutter_facebook_auth: ^6.0.1
   google_sign_in: ^6.3.0
+  cloudinary_public: ^0.21.0
+  provider: ^6.1.1
+  shared_preferences: ^2.2.2
+  image_picker: ^1.0.7
+  logging: ^1.2.0
 
 dev_dependencies:
   flutter_test:
