--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,33 @@
 {
-    "java.configuration.updateBuildConfiguration": "interactive"
+    "dart.flutterSdkPath": "C:\\flutter_windows_3.29.1-stable\\flutter", // Thay đường dẫn Flutter SDK của bạn
+    "dart.sdkPath": "C:\\flutter_windows_3.29.1-stable\\flutter\\bin\\cache\\dart-sdk", // Thay đường dẫn Dart SDK của bạn
+    "dart.debugExternalPackageLibraries": false,
+    "dart.debugSdkLibraries": false,
+    "dart.openDevTools": "flutter",
+    "[dart]": {
+        "editor.formatOnSave": true,
+        "editor.formatOnType": true,
+        "editor.rulers": [
+            80
+        ],
+        "editor.selectionHighlight": false,
+        "editor.suggest.snippetsPreventQuickSuggestions": false,
+        "editor.suggestSelection": "first",
+        "editor.tabCompletion": "onlySnippets",
+        "editor.wordBasedSuggestions": "off"
+    },
+    "files.autoSave": "afterDelay",
+    "files.autoSaveDelay": 1000,
+    "files.exclude": {
+        "**/.git": true,
+        "**/.svn": true,
+        "**/.hg": true,
+        "**/CVS": true,
+        "**/.DS_Store": true,
+        "**/Thumbs.db": true,
+        "**/.dart_tool": true,
+        "**/.pub-cache": true,
+        "**/.pub": true,
+        "**/build": true
+    }
 }
