--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  timeago: ^3.6.0
 
   intl_phone_field: ^3.0.1
   # The following adds the Cupertino Icons font to your application.
@@ -51,7 +52,7 @@ dependencies:
   photo_view: ^0.14.0
   cached_network_image: ^3.3.0
   intl: ^0.19.0
-
+  uuid: ^3.0.7
 dev_dependencies:
   flutter_test:
     sdk: flutter
