--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,10 +39,11 @@ dependencies:
   firebase_core: ^2.24.2
   firebase_auth: ^4.17.3
   firebase_app_check: ^0.2.1+8
+  firebase_dynamic_links: ^5.0.0
   cloud_firestore: ^4.13.6
   firebase_storage: ^11.5.6
   flutter_svg: ^2.0.17
-  flutter_facebook_auth: ^6.0.1
+
   google_sign_in: ^6.1.5
   cloudinary_public: ^0.21.0
   provider: ^6.1.2
@@ -53,6 +54,10 @@ dependencies:
   cached_network_image: ^3.3.0
   intl: ^0.19.0
   uuid: ^3.0.7
+  url_launcher: ^6.1.7
+  http: ^1.0.0
+  webview_flutter: ^4.11.0
+  app_links: ^6.4.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
